docs: create comprehensive README.md and CONTRIBUTING.md with validation
- Add complete README.md following playbook structure with all required sections
- Include Overview, Quickstart, Configuration, Usage, Architecture, Development, Deployment, Troubleshooting, Contributing, License
- Add detailed CONTRIBUTING.md with development workflow and coding standards
- Add .markdownlint.json for consistent markdown formatting
- Extract truth from actual codebase (pom.xml, web.xml, Constants.java, etc.)
- Document Google App Engine + AngularJS architecture
- Include REST API examples and authentication requirements
- Pass markdown lint validation (0 errors)
- Pass link check validation for all external links
- Provide runnable setup instructions for new developers

Co-Authored-By: Jaime Mizrachi <jaime@cognition.ai>